# DearDay-Server

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  dashboard.json  docker-compose.yml
.claude/: settings.json
.claude/hooks/: cargo-build.sh
.claude/skills/pr-create/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml
.sqlx/: query-0650f569543e537517f60b2521f9739fc3507bcc0e7ebad77306525f048202aa.json  query-23b61b318acec2480871923ac3fd18d1dff6cf9fd4c329c8f4fb08857c76b905.json  query-2892445f279e6a1bfa2046dd4469abb05692bdf9186fa3c5c23d59f2e58eb685.json  query-3ba87eb78bba7c51bcace152c45d706ee61278f1cd9694066be0ae2d51707b8d.json  query-3ded2bd667f06837157c76a85aa6807859fe500cd106b11b20fc01aafa04738d.json  query-54d6953f5ca8a8795e4ebffbf63f085e737eafcaf44af78942a9795db5abbe40.json  query-a606521e8ea806466b924042067a388431b75d9ff369785bb99d57f0bc7d09ff.json  query-d7c90930e086e96a099851b3d6999460db604b8901e0db2844e3c74a63d162ff.json  query-e504f48731ef5b2763a864415f45ff9dce0630b911c5a207164fc943810a564a.json  query-f9301f9df15e296e577714cf8a1d07d2729faf30ba2be54b7c92787748132a1f.json
docs/agents/: domain.md  issue-tracker.md  kakao-auth-testing.md  triage-labels.md
migrations/: 20260524000001_create_users.sql  20260524142644_add_kakao_auth.sql
prod/: Caddyfile  deploy.sh  docker-compose.yml  entrypoint.sh  prometheus.yml
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/routes/: mod.rs
src/routes/auth/: jwt.rs  (+5 more)
tests/api/: auth.rs  auth_real_kakao.rs  helpers.rs  main.rs  metrics.rs  users.rs
(+3 files in other folders)
