[package]
name = "dearday"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
chrono = { version = "0.4.44", default-features = false, features = ["serde", "clock"] }
dotenvy = "0.15.7"
moka = { version = "0.12.15", features = ["future"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "tls-rustls", "macros", "migrate", "chrono", "uuid"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["serde", "v4"] }

[dev-dependencies]
reqwest = { version = "0.13.3", features = ["json"] }
